<resources>
    <string name="app_name">DocScan</string>
    <string name="title_home">Домашний экран</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Уведомления</string>
    <string name="camera_icon">Камера</string>
    <string name="gallery_icon">Галлерея</string>
    <string name="title_scan">Сканирование</string>
    <string name="documents">Документы</string>
    <string name="deleteButton">Удалить</string>
    <string name="title_activity_login">Вход</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Пароль</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Войти</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Ошибка входа"</string>
    <string name="add_doc">Добавить документ</string>
    <string name="add_page">Добавить страницу</string>
    <string name="doc_title">Название документа</string>
    <string name="settings_title">Настройки</string>
    <string name="recognizer_mode_title">Режим распознавания: </string>
    <string name="user_title">Пользователь: </string>
    <string name="Login_title">Вход</string>
    <string name="login_with_google_tiltle_e">Войти с Google аккаунтом</string>
    <string name="offline_mode_title">Офлайн режим</string>
    <string name="image_quality_title">Качество изображения при съемке (влияет на скорость и точность распознавания): </string>
    <string name="source_lang_title">Язык перевода</string>
    <string name="save_pdf_title">Сохранить документ в пдф</string>
    <string-array name="recognizer_modes">
        <item>Быстрый</item>
        <item>Точный</item>
        <item>Баланс</item>
    </string-array>
    <string-array name="translator_languages">
        <item>Русский</item>
        <item>Английский</item>
        <item>Африкаанс</item>
        <item>Арабский</item>
        <item>Белорусский</item>
        <item>Болгарский</item>
        <item>Бенгальский</item>
        <item>Каталонский</item>
        <item>Чешский</item>
        <item>Валлийский</item>
        <item>Датский</item>
        <item>Немецкий</item>
        <item>Греческий</item>
        <item>Эсперанто</item>
        <item>Испанский</item>
        <item>Эстонский</item>
        <item>Персидский</item>
        <item>Финский</item>
        <item>Французский</item>
        <item>Ирландский</item>
        <item>галисийский</item>
        <item>Гуджарати</item>
        <item>Иврит</item>
        <item>Иврит</item>
        <item>Хорватский</item>
        <item>Гаитянский</item>
        <item>Венгерский</item>
        <item>Индонезийский</item>
        <item>Исландский</item>
        <item>Итальянский</item>
        <item>Японский</item>
        <item>Грузинский</item>
        <item>Каннада</item>
        <item>Корейский</item>
        <item>Литовский</item>
        <item>Латышский</item>
        <item>Литовский</item>
        <item>Македонский</item>
        <item>Маратхи</item>
        <item>Малайский</item>
        <item>Мальтийский</item>
        <item>Голландский</item>
        <item>Норвежский</item>
        <item>Польский</item>
        <item>Португальский</item>
        <item>Румынский</item>
        <item>Словацкий</item>
        <item>Словенский</item>
        <item>Албанский</item>
        <item>Шведский</item>
        <item>Суахили</item>
        <item>Тамильский</item>
        <item>Телугу</item>
        <item>Тайский</item>
        <item>Тагальский</item>
        <item>Турецкий</item>
        <item>Украинcкий</item>
        <item>Урду</item>
        <item>Вьетнамский</item>
        <item>Китайский</item>
    </string-array>
    <string-array name="translator_languages_code">
        <item>ru</item>
        <item>en</item>
        <item>af</item>
        <item>ar</item>
        <item>be</item>
        <item>bg</item>
        <item>bn</item>
        <item>ca</item>
        <item>cs</item>
        <item>cy</item>
        <item>da</item>
        <item>de</item>
        <item>el</item>
        <item>eo</item>
        <item>es</item>
        <item>et</item>
        <item>fa</item>
        <item>fi</item>
        <item>fr</item>
        <item>ga</item>
        <item>gl</item>
        <item>gu</item>
        <item>he</item>
        <item>he</item>
        <item>hr</item>
        <item>ht</item>
        <item>hu</item>
        <item>id</item>
        <item>is</item>
        <item>it</item>
        <item>ja</item>
        <item>ka</item>
        <item>nk</item>
        <item>ko</item>
        <item>lt</item>
        <item>la</item>
        <item>lt</item>
        <item>mk</item>
        <item>mr</item>
        <item>ms</item>
        <item>mt</item>
        <item>nl</item>
        <item>no</item>
        <item>pl</item>
        <item>pt</item>
        <item>ro</item>
        <item>sk</item>
        <item>sl</item>
        <item>sq</item>
        <item>sv</item>
        <item>sw</item>
        <item>ta</item>
        <item>te</item>
        <item>th</item>
        <item>tl</item>
        <item>tr</item>
        <item>uk</item>
        <item>ur</item>
        <item>vi</item>
        <item>zh</item>
    </string-array>
</resources>