<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewDocumentActivity">

    <EditText
        android:id="@+id/textViewNewDocTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:hint="@string/doc_title"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/RecyclerViewDocuments"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginTop="2dp"
        app:layout_constraintBottom_toTopOf="@+id/buttonDocDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="Страницы докумена:"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewNewDocTitle" />

    <Button
        android:id="@+id/buttonDocDone"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="Готово"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButtonShotPage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="32dp"
        android:clickable="true"
        android:contentDescription="@string/add_page"
        app:layout_constraintBottom_toTopOf="@+id/buttonDocDone"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@android:drawable/ic_menu_camera" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchRecognition"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginBottom="8dp"
        android:minHeight="48dp"
        android:text="Выполнить распознавание текста"
        app:layout_constraintBottom_toTopOf="@+id/switchTranslate"
        app:layout_constraintEnd_toEndOf="@+id/switchTranslate"
        app:layout_constraintStart_toStartOf="@+id/switchTranslate" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/switchTranslate"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:minHeight="48dp"
        android:text="Выполнить перевод документа"
        app:layout_constraintBottom_toTopOf="@+id/spinnerSourceLang"
        app:layout_constraintEnd_toEndOf="@+id/spinnerTargetLang"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/spinnerSourceLang"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/source_lang_title"
        android:entries="@array/translator_languages"
        app:layout_constraintBottom_toTopOf="@+id/buttonDocDone"
        app:layout_constraintStart_toEndOf="@+id/textView4" />

    <Spinner
        android:id="@+id/spinnerTargetLang"
        android:layout_width="107dp"
        android:layout_height="48dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:contentDescription="@string/source_lang_title"
        android:entries="@array/translator_languages"
        app:layout_constraintBottom_toTopOf="@+id/buttonDocDone"
        app:layout_constraintStart_toEndOf="@+id/textView6" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="С"
        app:layout_constraintBottom_toTopOf="@+id/buttonDocDone"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:text="на"
        app:layout_constraintBottom_toTopOf="@+id/buttonDocDone"
        app:layout_constraintStart_toEndOf="@+id/spinnerSourceLang" />

</androidx.constraintlayout.widget.ConstraintLayout>